ci: establish SENTRY_DSN_PERFORMANCE, and fix broken Sentry tags

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -376,6 +376,7 @@ jobs:
       TS_MIGRATION_DASHBOARD_TOKEN: ${{ secrets.TS_MIGRATION_DASHBOARD_TOKEN }}
 
   build-source-map-explorer:
+    if: ${{ github.event_name != 'merge_group' }} # Skip this job for the Merge Queue
     needs:
       - identify-builds
       - prep-deps
