feat: enable require-pr-numbers flag for changelog generation
Update changelog workflows to filter out direct commits without PR numbers,
ensuring all changelog entries represent reviewed and approved changes.

Changes:
- Update @metamask/auto-changelog to ^5.3.0
- Add require-pr-numbers: 'true' to update-release-changelog workflow
- Add require-pr-numbers: 'true' to create-release-pr workflow

--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -82,7 +82,7 @@ jobs:
       pull-requests: write
     steps:
       - name: Create Release PR
-        uses: MetaMask/github-tools/.github/actions/create-release-pr@v1.1.0
+        uses: MetaMask/github-tools/.github/actions/create-release-pr@feat/auto-changelog-flag
         with:
           platform: extension
           checkout-base-branch: ${{ needs.resolve-bases.outputs.checkout_base }}
@@ -94,3 +94,4 @@ jobs:
           # (this is due to github limitations on fetching secrets from called workflows).
           github-token: ${{ github.event_name == 'workflow_dispatch' && secrets.PR_TOKEN || secrets.github-token }}
           google-application-creds-base64: ${{ github.event_name == 'workflow_dispatch' && secrets.GCP_RLS_SHEET_ACCOUNT_BASE64 || secrets.google-application-creds-base64 }}
+          require-pr-numbers: 'true'
