--- a/.github/workflows/update-release-changelog.yml
+++ b/.github/workflows/update-release-changelog.yml
@@ -48,11 +48,12 @@ jobs:
       pull-requests: write
     steps:
       - name: Update Release Changelog
-        uses: MetaMask/github-tools/.github/actions/update-release-changelog@v1.1.0
+        uses: MetaMask/github-tools/.github/actions/update-release-changelog@feat/auto-changelog-flag
         with:
           release-branch: ${{ github.ref_name }}
           repository-url: ${{ github.server_url }}/${{ github.repository }}
           platform: extension
           previous-version-ref: 'null'
-          github-tools-version: v1.1.0
+          github-tools-version: feat/auto-changelog-flag
           github-token: ${{ secrets.PR_TOKEN }}
+          require-pr-numbers: 'true'
