--- a/.github/workflows/merge-stable-sync-pr.yml
+++ b/.github/workflows/merge-stable-sync-pr.yml
@@ -1,4 +1,4 @@
-name: Merge Approved PR
+name: Merge Stable Sync PR
 
 on:
   # Trigger the workflow when a comment is created on an issue or pull request
@@ -15,8 +15,11 @@ jobs:
         github.event.comment.author_association == 'MEMBER' ||
         github.event.comment.author_association == 'OWNER'
       )
-    uses: MetaMask/github-tools/.github/workflows/merge-approved-pr.yml@30baa9da0b80d94dd8bdf0b6a932c46506664857
+    uses: MetaMask/github-tools/.github/workflows/merge-approved-pr.yml@7c0ab4db1e9c1d5673fe7958e8959f1842edbebd
     with:
       pr-number: ${{ github.event.issue.number }}
+      # Merge PRs from stable-main-X.Y.Z into main
+      required-base-branch: 'main'
+      head-branch-pattern: '^stable-main-[0-9]+\.[0-9]+\.[0-9]+$'
     secrets:
       github-token: ${{ secrets.METAMASK_EXTENSION_BRANCH_SYNC_TOKEN }}
