refactor: use github-tools v1.1.2 instead of feature branch
Update workflows to use the released v1.1.2 version of github-tools
which includes the --requirePrNumbers flag enabled by default.

--- a/.github/workflows/update-release-changelog.yml
+++ b/.github/workflows/update-release-changelog.yml
@@ -48,11 +48,11 @@ jobs:
       pull-requests: write
     steps:
       - name: Update Release Changelog
-        uses: MetaMask/github-tools/.github/actions/update-release-changelog@feat/auto-changelog-flag
+        uses: MetaMask/github-tools/.github/actions/update-release-changelog@v1.1.2
         with:
           release-branch: ${{ github.ref_name }}
           repository-url: ${{ github.server_url }}/${{ github.repository }}
           platform: extension
           previous-version-ref: 'null'
-          github-tools-version: feat/auto-changelog-flag
+          github-tools-version: v1.1.2
           github-token: ${{ secrets.PR_TOKEN }}
