--- a/package.json
+++ b/package.json
@@ -277,7 +277,7 @@
     "@metamask/address-book-controller": "^7.0.0",
     "@metamask/announcement-controller": "^8.0.0",
     "@metamask/approval-controller": "^8.0.0",
-    "@metamask/assets-controllers": "patch:@metamask/assets-controllers@patch%3A@metamask/assets-controllers@npm%253A89.0.1%23~/.yarn/patches/@metamask-assets-controllers-npm-89.0.1-02fa7acd54.patch%3A%3Aversion=89.0.1&hash=6be0d3#~/.yarn/patches/@metamask-assets-controllers-patch-7c7d711c8c.patch",
+    "@metamask/assets-controllers": "patch:@metamask/assets-controllers@patch%3A@metamask/assets-controllers@patch%253A@metamask/assets-controllers@npm%25253A89.0.1%2523~/.yarn/patches/@metamask-assets-controllers-npm-89.0.1-02fa7acd54.patch%253A%253Aversion=89.0.1&hash=6be0d3%23~/.yarn/patches/@metamask-assets-controllers-patch-7c7d711c8c.patch%3A%3Aversion=89.0.1&hash=a1afd2#~/.yarn/patches/@metamask-assets-controllers-patch-47695f409e.patch",
     "@metamask/base-controller": "^9.0.0",
     "@metamask/bitcoin-wallet-snap": "^1.8.0",
     "@metamask/bridge-controller": "patch:@metamask/bridge-controller@npm%3A61.0.0#~/.yarn/patches/@metamask-bridge-controller-npm-61.0.0-8c413c463f.patch",
