--- a/package.json
+++ b/package.json
@@ -196,7 +196,7 @@
     "readable-stream-3@^3.6.2": "npm:readable-stream@^3.6.2",
     "semver@7.3.7": "^7.5.4",
     "semver@7.3.8": "^7.5.4",
-    "@metamask/snaps-sdk": "^10.1.0",
+    "@metamask/snaps-sdk": "^10.2.0",
     "@swc/types@0.1.5": "^0.1.6",
     "@babel/core": "patch:@babel/core@npm%3A7.25.9#~/.yarn/patches/@babel-core-npm-7.25.9-4ae3bff7f3.patch",
     "@babel/runtime": "patch:@babel/runtime@npm%3A7.25.9#~/.yarn/patches/@babel-runtime-npm-7.25.9-fe8c62510a.patch",
@@ -254,6 +254,7 @@
   "dependencies": {
     "@babel/runtime": "patch:@babel/runtime@npm%3A7.25.9#~/.yarn/patches/@babel-runtime-npm-7.25.9-fe8c62510a.patch",
     "@blockaid/ppom_release": "^1.5.3",
+    "@date-io/luxon": "^1.3.13",
     "@ensdomains/content-hash": "^2.5.7",
     "@ethereumjs/tx": "patch:@ethereumjs/tx@npm%3A5.4.0#~/.yarn/patches/@ethereumjs-tx-npm-5.4.0-0c4a0f973e.patch",
     "@ethersproject/abi": "^5.6.4",
@@ -269,6 +270,7 @@
     "@lavamoat/webpack": "1.5.3",
     "@ledgerhq/errors": "^6.21.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.11",
     "@metamask/abi-utils": "^3.0.0",
     "@metamask/account-api": "^0.12.0",
     "@metamask/account-tree-controller": "^3.0.0",
@@ -363,11 +365,11 @@
     "@metamask/shield-controller": "^3.1.0",
     "@metamask/signature-controller": "^35.0.0",
     "@metamask/smart-transactions-controller": "^20.0.0",
-    "@metamask/snaps-controllers": "^17.0.0",
-    "@metamask/snaps-execution-environments": "^10.2.3",
+    "@metamask/snaps-controllers": "^17.1.0",
+    "@metamask/snaps-execution-environments": "^10.3.0",
     "@metamask/snaps-rpc-methods": "^14.1.1",
-    "@metamask/snaps-sdk": "^10.1.0",
-    "@metamask/snaps-utils": "^11.6.1",
+    "@metamask/snaps-sdk": "^10.2.0",
+    "@metamask/snaps-utils": "^11.6.2",
     "@metamask/solana-wallet-snap": "^2.5.1",
     "@metamask/solana-wallet-standard": "^0.6.0",
     "@metamask/streams": "^0.4.0",
@@ -503,7 +505,7 @@
     "@metamask/test-dapp": "9.3.0",
     "@metamask/test-dapp-multichain": "^0.17.0",
     "@metamask/test-dapp-solana": "^0.3.1",
-    "@metamask/test-snaps": "^3.0.0",
+    "@metamask/test-snaps": "^3.1.0",
     "@noble/ciphers": "^1.3.0",
     "@noble/curves": "^1.9.2",
     "@octokit/types": "^14.0.0",
