fix skip of build-source-map-explorer [skip-e2e]

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -376,7 +376,6 @@ jobs:
       TS_MIGRATION_DASHBOARD_TOKEN: ${{ secrets.TS_MIGRATION_DASHBOARD_TOKEN }}
 
   build-source-map-explorer:
-    if: ${{ github.event_name != 'merge_group' }} # Skip this job for the Merge Queue
     needs:
       - identify-builds
       - prep-deps
@@ -385,6 +384,7 @@ jobs:
     timeout-minutes: 30
     steps:
       - name: Checkout and setup environment
+        if: ${{ github.event_name != 'merge_group' }} # Skip every step in this job for the Merge Queue
         uses: MetaMask/action-checkout-and-setup@v1
         with:
           is-high-risk-environment: false
@@ -392,6 +392,7 @@ jobs:
           use-yarn-hydrate: true
 
       - name: Download artifact 'build-dist-browserify'
+        if: ${{ github.event_name != 'merge_group' }} # Skip every step in this job for the Merge Queue
         uses: actions/download-artifact@v4
         with:
           name: build-dist-browserify
@@ -399,9 +400,10 @@ jobs:
           run-id: ${{ needs.identify-builds.outputs.builds-from-run }} # Download from whatever run the identify-builds job said.
 
       - run: ./development/source-map-explorer.sh
+        if: ${{ github.event_name != 'merge_group' }} # Skip every step in this job for the Merge Queue
 
       - name: Upload 'source-map-explorer' to S3
-        if: ${{ vars.AWS_REGION && vars.AWS_IAM_ROLE && vars.AWS_S3_BUCKET }}
+        if: ${{ github.event_name != 'merge_group' && vars.AWS_REGION && vars.AWS_IAM_ROLE && vars.AWS_S3_BUCKET }}
         uses: metamask/github-tools/.github/actions/upload-s3@1233659b3850eb84824d7375e2e0c58eb237701d
         with:
           aws-region: ${{ vars.AWS_REGION }}
