--- a/builds.yml
+++ b/builds.yml
@@ -35,7 +35,7 @@ buildTypes:
       - IFRAME_EXECUTION_ENVIRONMENT_URL: https://execution.metamask.io/iframe/10.3.0/index.html
       - ACCOUNT_SNAPS_DIRECTORY_URL: https://snaps.metamask.io/account-management
       - IS_SIDEPANEL: true
-      - EXTENSION_UX_PNA25: true
+      - EXTENSION_UX_PNA25: false
       # for seedless onboarding (social login)
       - GOOGLE_PROD_CLIENT_ID
       - APPLE_PROD_CLIENT_ID
@@ -70,7 +70,7 @@ buildTypes:
       - IFRAME_EXECUTION_ENVIRONMENT_URL: https://execution.metamask.io/iframe/10.3.0/index.html
       - ACCOUNT_SNAPS_DIRECTORY_URL: https://snaps.metamask.io/account-management
       - IS_SIDEPANEL: true
-      - EXTENSION_UX_PNA25: true
+      - EXTENSION_UX_PNA25: false
       # for seedless onboarding (social login)
       - GOOGLE_BETA_CLIENT_ID
       - APPLE_BETA_CLIENT_ID
@@ -105,7 +105,7 @@ buildTypes:
       - REJECT_INVALID_SNAPS_PLATFORM_VERSION: true
       - IFRAME_EXECUTION_ENVIRONMENT_URL: https://execution.metamask.io/iframe/10.3.0/index.html
       - ACCOUNT_SNAPS_DIRECTORY_URL: https://snaps.metamask.io/account-management
-      - EXTENSION_UX_PNA25: true
+      - EXTENSION_UX_PNA25: false
       # for seedless onboarding (social login)
       - GOOGLE_EXPERIMENTAL_CLIENT_ID
       - APPLE_EXPERIMENTAL_CLIENT_ID
@@ -140,7 +140,7 @@ buildTypes:
       - ACCOUNT_SNAPS_DIRECTORY_URL: https://metamask.github.io/snaps-directory-staging/main/account-management
       - EIP_4337_ENTRYPOINT: '0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789'
       - IS_SIDEPANEL: true
-      - EXTENSION_UX_PNA25: true
+      - EXTENSION_UX_PNA25: false
       # for seedless onboarding (social login)
       - GOOGLE_FLASK_CLIENT_ID
       - APPLE_FLASK_CLIENT_ID
@@ -463,5 +463,5 @@ env:
   - FORCE_PREINSTALLED_SNAPS: 'false'
 
   # PNA25 (Privacy Notice)
-  - EXTENSION_UX_PNA25: true
+  - EXTENSION_UX_PNA25: false
   - IS_SIDEPANEL: true
