--- a/package.json
+++ b/package.json
@@ -284,8 +284,8 @@
     "@metamask/assets-controllers": "patch:@metamask/assets-controllers@patch%3A@metamask/assets-controllers@npm%253A93.1.0%23~/.yarn/patches/@metamask-assets-controllers-npm-93.1.0-ea998cb0bd.patch%3A%3Aversion=93.1.0&hash=224a2c#~/.yarn/patches/@metamask-assets-controllers-patch-0229f60576.patch",
     "@metamask/base-controller": "^9.0.0",
     "@metamask/bitcoin-wallet-snap": "^1.8.0",
-    "@metamask/bridge-controller": "patch:@metamask/bridge-controller@npm%3A64.0.0#~/.yarn/patches/@metamask-bridge-controller-npm-64.0.0-956740f7c8.patch",
-    "@metamask/bridge-status-controller": "^64.0.1",
+    "@metamask/bridge-controller": "64.1.0",
+    "@metamask/bridge-status-controller": "64.1.0",
     "@metamask/browser-passworder": "^6.0.0",
     "@metamask/chain-agnostic-permission": "^1.3.0",
     "@metamask/claims-controller": "^0.2.0",
